--- a/src/App.scss
+++ b/src/App.scss
@@ -52,6 +52,11 @@
   p {
     width: 100%;
     margin: 0 10px;
+
+    &.done {
+      text-decoration: line-through;
+      opacity: 0.2;
+    }
   }
 
   .tick {
