Add cheer component when you have completed all todos

--- a/src/App.scss
+++ b/src/App.scss
@@ -79,3 +79,11 @@
 .deleteSingleButton {
 
 }
+
+.cheer {
+  font-size: 0.8em;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #ddffe0;
+  border-radius: 6px;
+}
